--- a/Para Papa.html
+++ b/Para Papa.html
@@ -62,16 +62,18 @@
             apoyo y mi heroe.
             Gracias por estar siempre a mi lado, por enseñarme valores y por llenar mi vida de amor y alegria.
          </p>
+
          <button onclick="playMusic()">¡Reproducir Musica!</button>
     </div>
 
     <script>
-        function playmusic() {
-            const muic = docuent.getElementById('music');
+        function playMusic() {
+            const muic = document.getElementById('music');
             music.play();
             alert('¡Disfruta la musica y Feliz Dia del Padre!');
         }
-    <script>   
-
-</body>
-</html>
+    </script>   
+        <body>
+            
+        </body>
+        <html></html>
